--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
 <p>This is a local Repo.</p>
-<p>It is used to test the functionality of the local repository feature.</p>
+<p>It is used to test the functionality of the local repository feature (Dropdown).</p>
